# QNN_HexRT

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_zh.md  BUILD.md  DEPENDENCIES.md  INDEX.md  INTRODUCTION_zh.md  OPTIMIZATIONS.md  VERSION_HISTORY.md
include/qhexrt/: qhexrt_c.h
src/: lfm_manifest.cpp  lfm_manifest.hpp  lfm_runner.cpp  lfm_runner.hpp  model_capabilities.cpp  model_capabilities.hpp  qhexrt_c.cpp  qhexrt_internal.hpp  qnn_runtime.cpp  qnn_runtime.hpp  read_only_mapping.cpp  read_only_mapping.hpp  tokenizer.cpp  tokenizer.hpp
tools/: qhx_generate.cpp  tokenizer_smoke.cpp
tools/scripts/: stage_prebuilt_for_sdk.py  stage_prebuilt_for_sdk.sh
